これはMKV10のそーすを改造したものです。

判明バグ?;
一部のゲームでキーボードをだすとフリーズする(武装神姫)
比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
一部の浮動小数が表示されない 0.01,0.001
8byte時メモリエディタのコピー箇所がおかしい
コードがないとき新規コードが保存されない

this is modded mkultrav10.
KnownProblem;
certain game,kenybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position

2010/12/10
ディスアセンブラ,PRXメニューからチートを足しても元の場所に戻れるようにした

2010/12/8
コードがないとき左端タブを選択できないよう変更
カラーファイルで設定項目追加
保存したとき同じとこを使っているのでサーチを初期化するよう変更
//PSPFAT
0x8838DBF0 ;searchtemp_address
0x0000E400 ;searchresult_Max
//PSPSLIM
0x8A000000 ;searchtemp_address
0x00040000 ;searchresult_Max

2010/12/7
0x8838DBF0に変更してみる
カラーファイルで変更可能

2010/12/6
保存領域オフセットを150kbずらした(他のプラグイン 150KB以内なら共用可能？)

2010/12/3
サーチをスクラッチ領域に変更、サーチ保存件数1500まで拡大
チート編集でもLRで27行分とばせるようにした
fix null string,big database
use search terampory,0x10004 scrachzone
L/R skip +-27line cheatedit

2010/12/2
NPR旧CWCモードの32bit書き込みを復元なしに変更
コピーメニューのフラグをNPR/CWC([])に変更
サーチ結果を499件まで拡大
L/Rで20件分結果を飛ばせるようにした
コードの保存をメモリに変更したため早くなった
changed old NPR of CWC32bitWrite,need nobackup code for joker
copy menu,CWC cheat;32bit write nobackup&restore
display searchresult 499
L/R skip +-20 searchReesult
speedup cheatsave

2010/11/31
ヒカクサーチと数値サーチの速度向上
とりあえず500件まで
speedup search speed,result up to 500

2010/11/29
カラーファイルの閉じ忘れを修正,ファイルの上限を撤廃
colorfixed

2010/11/28
フリーズするのでNOHOME廃止,home2度おしに変更
HOMEBREW互換になった？
normal UMDgame/HB hybridmode

2010/11/27
HOMEBREWGENをパス(hbpath)をダンプして読ますように変更、0x140だけ対応(M33/GEN)
POPS版は通常UMDゲームでも一応うごくのでID処理共通化。
now support HOMEBREW cheat HACK(name offset 0x140only)

2010/11/26
HOMEBREWに試験的に対応？GEN3でしか確認してないので不明
hbtest

2010/11/25
コピー別メニューで文字がでていたのを修正
コピー開始終了ジャンプをメニュー1,2番に変更、メモリエディタでも使用可能
コピー開始終了位置が０のままなので0x48800000に変更(指定してないとフリーズするため)
16bit半浮動小数サーチで両方でてるときはみ出すことがあったので下に揃えるように変更
VHFLOAT -> VFLOAT
fixed string copymenu
fixed copyStart/CopyEnd jump,support ram browser